--- a/Lista001/Forms.html
+++ b/Lista001/Forms.html
@@ -9,7 +9,7 @@
     <div style="text-align: center;">
         <h1>Cadastro</h1>
     </div>
-    <form action="/Lista001/Cadastro.html" target="_blank">
+    <form action="/Lista001/Cadastro_concluido.html" target="_blank">
     <h2>Informações pessoais</h2>
         <label for="fname">Primeiro nome:</label>
         <input type="text" id="fname" name="Primeiro nome"> <br>
