--- a/Lista002/trabalhe.html
+++ b/Lista002/trabalhe.html
@@ -10,7 +10,7 @@
     <table border="0">
         <tr>
             <td colspan="1"><a href="index.html"><img src="img/Biopark-Educacao.svg" alt="banner"></a></td>
-            <td align="right"><a href="sobre.html">Sobre o Biopark</a> | <a href="">Invista</a> | <a href="">Empresas</a> | <a href="">Conosco</a></td>
+            <td align="right"><a href="sobre.html" target="_blank">Sobre o Biopark</a> | <a href="invista.html" target="_blank">Invista</a> | <a href="">Empresas</a> | <a href="trabalhe.html" target="_blank">Trabalhe Conosco</a></td>
         </tr>
         <tr>
             <th align="left"><p style="font-size: 25px;">Trabalhe Conosco</p><br></th>
@@ -47,6 +47,8 @@
             <option value="secretario">Secretário</option>
             <option value="seguranca">Segurança</option>
         </select><br><br>
+        <label for="myfile">Deixe seu currículo:</label><br>
+        <input type="file" id="myfile" name="myfile"><br><br>
         <label for="descricao">Descrição</label><br>
         <textarea name="message" rows="10" cols="30"></textarea><br>
         <input type="submit" value="Enviar">
