--- a/Lista002/invista.html
+++ b/Lista002/invista.html
@@ -9,7 +9,7 @@
 <body>
     <table border="0">
         <tr>
-            <td colspan="3"><img src="img/Biopark-Educacao.svg" alt="banner"></td>
+            <td colspan="3"><a href="index.html">img/Biopark-Educacao.svg" alt="banner"></a></td>
             <td align="right"><a href="sobre.html" target="_blank">Sobre o Biopark</a> | <a href="invista.html" target="_blank">Invista</a> | <a href="">Empresas</a> | <a href="trabalhe.html" target="_blank">Trabalhe Conosco</a></td>
         </tr>
         <tr>
