--- a/Lista002/sobre.html
+++ b/Lista002/sobre.html
@@ -10,7 +10,7 @@
     <table border="0">
         <tr>
             <td colspan="1"><a href="index.html"><img src="img/Biopark-Educacao.svg" alt="banner"></a></td>
-            <td align="right"><a href="">Sobre o Biopark</a> | <a href="">Invista</a> | <a href="">Empresas</a> | <a href="">Conosco</a></td>
+            <td align="right"><a href="sobre.html" target="_blank">Sobre o Biopark</a> | <a href="invista.html" target="_blank">Invista</a> | <a href="">Empresas</a> | <a href="trabalhe.html" target="_blank">Trabalhe Conosco</a></td>
         </tr>
         <tr>
             <th align="left"><p style="font-size: 25px;">Sobre o Biopark </p><br></th>
